src/public/stylesheets/main.css
/* ... */
.link {
  font-size: 50px;
  line-height: 0px;
}

/* something ??? */
.modebar {
  display: none !important;
}

/* form styling */
form {
  display: grid;
  grid-gap: 50px;
  grid-template-columns: 48% 48;
  margin: 10px auto 10px auto;
  max-width: 600px;
}
#formTitle {
  margin-bottom: 5;
}
.formInput {
  background: #fff;
  border: 1px solid #1E1E1E;
  border-radius: 8px;
}
#podSettingsSubmit {
  font-size: 15px;
  background: #D3D3D3;
  border: 1px solid white;
  border-radius:8px;
  width: 100%;
  height: 30px;
  margin-top: 10px;
}
#podSettingsSubmit:hover {
  background: #3C3C3C;
  color: white;
  border-radius:8px;
  transition: all .25s ease-in-out;
  -moz-transition: all .25s ease-in-out;
  -webkit-transition: all .25s ease-in-out;
}
label {
  padding-top: 10px;
  color: #1E1E1E;
  font-style: italic;
  bottom: 10px;
}
.formInput {
  padding: 0.7em;
  margin-top: 8px;
  margin-bottom: 8px;
}
.formInput:focus {
  background: #D3D3D3;
  border: 1px solid black;
  border-radius:8px;
}
#formLeft {
  grid-column: 1/2;
  grid-row: 1/2;
}
#formRight {
  grid-column: 2/3;
  grid-row: 1;
}
#formFull {
  grid-column: 1/3;
  grid-row: 2;
}
hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #000000;
  margin: 1em 0;
  padding: 0; 
}

/* extra box styling */ 
#extra {
  border: none;
}

/* JSON timer counters styling */
#info {
  padding-left: 15px;
  line-height: 10px;
}

/* JSON button stlying */
.JSON_button {
  text-decoration: none;
  position: inline-block;
  margin: 4px 3px;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
  cursor: pointer;
  border: 2px solid #808080;
  border-radius: 6px;
  width: 100px;
  height: 80px;
  font-weight: 800;
}
.JSON_button:hover {
  background-color: #808080 !important;
  -webkit-transition: background-color 200ms linear !important;
  -ms-transition: background-color 200ms linear !important;
  transition: background-color 200ms linear !important;
}
#fileSelector {
  background-color: #554188;
  color: white;
}
#back {
  background-color: #C66553;
  color: white;
}
#forward {
  background-color: #C66553;
  color: white;
}
#play {
  background-color: #3C9159;
  color: white;
}
#pause{
  background-color: #C6A153;
  color: white;
}
#reset{
  background-color: #C10000;
  color: white;
}

